--- a/pHdiprotic.html
+++ b/pHdiprotic.html
@@ -50,6 +50,6 @@
         </div>
     </div>
     <canvas id="phCanvas" width="800" height="400"></canvas>
-    <script src="phRuler.js"></script>
+    <script src="diprotic.js"></script>
 </body>
 </html>
