--- a/pHdiprotic/pHdiprotic.html
+++ b/pHdiprotic/pHdiprotic.html
@@ -2,22 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pH Ruler for Diprotic Amino Acids</title>
     <style>
         body {
-            background-color: #FFFFFF;
-            color: #000000;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
             text-align: center;
+            padding: 20px;
         }
-        #controlPanel {
+        h1 {
+            color: #007BFF;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        .slider-container {
             display: flex;
             justify-content: center;
             margin-top: 20px;
         }
-        .sliderContainer {
+        .slider {
             margin: 0 20px;
         }
-        .slider {
+        .slider input {
             width: 300px;
         }
         canvas {
@@ -27,29 +41,28 @@
     </style>
 </head>
 <body>
-    <h2>Welcome to the pH Ruler for Diprotic Amino Acids!</h2>
-    <hr>
-    <h4>Drag the pH slider and note how the percentages of protonated and deprotonated forms of the carboxylate, amino, and side chain groups change.</h4>
-    <h4>Also note how the percentages of the positively charged, zwitterionic, and negatively charged forms of the diprotic amino acid vary as a function of pH.</h4>
-    <hr>
-    <div id="controlPanel">
-        <div class="sliderContainer">
-            <label for="phSlider">pH</label>
-            <input type="range" id="phSlider" class="slider" min="0" max="140" step="1">
-            <span id="phValue">7.0</span>
+    <div class="container">
+        <h1>Welcome to the pH Ruler for Diprotic Amino Acids!</h1>
+        <hr>
+        <h4>Drag the pH slider and note how the percentages of protonated and deprotonated forms of the carboxylate and amino groups change.</h4>
+        <h4>Also note how the percentages of the positively charged, zwitterionic, and negatively charged forms vary as a function of pH.</h4>
+        <hr>
+        <div class="slider-container">
+            <div class="slider">
+                <label for="phSlider">pH: <span id="phValue">7.0</span></label>
+                <input type="range" id="phSlider" min="0" max="140" step="1">
+            </div>
+            <div class="slider">
+                <label for="pka1Slider">pKa1: <span id="pka1Value">2.3</span></label>
+                <input type="range" id="pka1Slider" min="0" max="140" step="1">
+            </div>
+            <div class="slider">
+                <label for="pka2Slider">pKa2: <span id="pka2Value">9.7</span></label>
+                <input type="range" id="pka2Slider" min="0" max="140" step="1">
+            </div>
         </div>
-        <div class="sliderContainer">
-            <label for="pka1Slider">pKa1</label>
-            <input type="range" id="pka1Slider" class="slider" min="0" max="140" step="1">
-            <span id="pka1Value">2.3</span>
-        </div>
-        <div class="sliderContainer">
-            <label for="pka2Slider">pKa2</label>
-            <input type="range" id="pka2Slider" class="slider" min="0" max="140" step="1">
-            <span id="pka2Value">9.7</span>
-        </div>
+        <canvas id="phCanvas" width="800" height="400"></canvas>
     </div>
-    <canvas id="phCanvas" width="800" height="400"></canvas>
     <script src="diprotic.js"></script>
 </body>
 </html>
