--- a/pHdiprotic/pHruler_diprotic.html
+++ b/pHdiprotic/pHruler_diprotic.html
@@ -5,23 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pH Ruler for Diprotic Amino Acids</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .container {
-      margin-top: 50px;
-      text-align: center;
-    }
-    canvas {
-      border: 1px solid black;
-      margin-top: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">pH Ruler</a>
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <a class="navbar-brand" href="../pHruler.html">pH Ruler</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -43,15 +34,15 @@
     <p>Also note how the percentages of the positively charged, zwitterionic, and negatively charged forms vary as a function of pH.</p>
     <hr class="my-4">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 mb-3">
         <label for="phSlider">pH: <span id="phValue">7.0</span></label>
         <input type="range" id="phSlider" class="custom-range" min="0" max="140" step="1">
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mb-3">
         <label for="pka1Slider">pKa1: <span id="pka1Value">2.3</span></label>
         <input type="range" id="pka1Slider" class="custom-range" min="0" max="140" step="1">
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 mb-3">
         <label for="pka2Slider">pKa2: <span id="pka2Value">9.7</span></label>
         <input type="range" id="pka2Slider" class="custom-range" min="0" max="140" step="1">
       </div>
