--- a/pHruler.html
+++ b/pHruler.html
@@ -5,22 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pH Ruler Web Application</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .container {
-      margin-top: 50px;
-      text-align: center;
-    }
-    .btn {
-      margin: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">pH Ruler</a>
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <a class="navbar-brand" href="pHruler.html">pH Ruler</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -40,8 +32,8 @@
     <p class="lead">Please click on one of the buttons below to begin using the pH ruler for either diprotic or triprotic amino acids:</p>
     <hr class="my-4">
     <div class="d-flex justify-content-center">
-      <a href="pHdiprotic/pHruler_diprotic.html" class="btn btn-primary btn-lg">pH Ruler for Diprotic Amino Acids</a>
-      <a href="pHtriprotic/pHruler_triprotic.html" class="btn btn-success btn-lg">pH Ruler for Triprotic Amino Acids</a>
+      <a href="pHdiprotic/pHruler_diprotic.html" class="btn btn-primary btn-lg mx-2">Diprotic</a>
+      <a href="pHtriprotic/pHruler_triprotic.html" class="btn btn-success btn-lg mx-2">Triprotic</a>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
